--- a/style.css
+++ b/style.css
@@ -1,29 +1,40 @@
 body{
-  background-color: red;
+  background-color:red;
 }
 ul{
   list-style-type:none;
-  width: 100%;
+  width: 200%;
+  text-align:center;
   position: fixed;
 }
 li{
-  float: center;
-  text-decoration-line:none;
+  float:left;
 }
-li a: hover{
+li a{
   color:black;
-  padding: 30px
+  padding: 20px;
+  text-decoration-line: none;
+  border-style:dashed;
+ 
+} 
+li a:hover{
+  background-color:white;
+  color:#827081;
 }
-h1{
- text-decoration-line:underline; 
- letter-spacing: 2px;
+h1 {
+  color:#827081;
+  font-size:500%;
+ letter-spacing:2px;
+  text decoration-line:underline;
 }
 p{
-  font-size:200%;
-  
+  color:#827081;
+  font-size:300%;
 }
 img{
   width:80%;
+ border:dashed
+}
+iframe{
   border:dashed
-  
 }
